# skills

./: .gitignore  AGENTS.md  README.md
.claude/skills/fullstack-architect-review/: REFERENCE.md  SKILL.md  STANDARDS.md
docs/: Google-CPP-软件架构师角色定义.md
docs/中金黄金/: 中金黄金--2026-03-02-V1.html  中金黄金--2026-03-02.html
docs/南网能源/: 003035_analysis_20260227.json  南网能源--2026-02-27.html
docs/岩山科技/: 002195_analysis_20260227.json  岩山科技--2026-02-13.html  岩山科技--2026-02-27-V0.html  岩山科技--2026-03-02-V0.html
docs/数据港/: 数据港--2026-02-27.html
docs/美伊冲突受益股分析/: 美伊冲突受益股分析--2026-02-28.html
plan/: 趋势交易系统建立计划.md
skills/cpp-architect-review/: .skillinfo  EXAMPLES.md  QUICK_REFERENCE.md  README.md  REFERENCE.md  SKILL.md  STANDARDS.md
skills/cpp-architect-review/commands/: google-cpp-review.md
skills/cpp-task-driven-dev/: SKILL.md
skills/fullstack-architect-review/: .skillinfo  EXAMPLES.md  QUICK_REFERENCE.md  README.md  REFERENCE.md  STANDARDS.md
skills/pdf-password-remover/: SKILL.md
skills/pdf-password-remover/cpp/: CMakeLists.txt  pdf_unlock.cpp
skills/python-architect/: .skillinfo  EXAMPLES.md  REFERENCE.md  SKILL.md  STANDARDS.md
skills/python-architect/references/: cli.md  data.md  web.md
skills/python-architect/scripts/: auto-fix.sh  detect-stack.sh  init-project.sh  quick-check.sh  run-review.sh  run-tests.sh  security-audit.sh
skills/stock-anomaly-analysis/: SKILL.md
skills/stock-anomaly-analysis/scripts/: fetch_stock_data.py  generate_report.py
skills/stock-batch-scanner/: SKILL.md
skills/stock-batch-scanner/scripts/: sync_klines.py  (+5 more)
skills/web-search/: SKILL.md
skills/weekly-sector-heatmap/: SKILL.md
(+15 files in other folders)
